feat: implement roles services and controllers

--- a/resources/lang/en/messages.yaml
+++ b/resources/lang/en/messages.yaml
@@ -1,3 +1,4 @@
 successfully_deleted: '{resource} successfully deleted.'
 successfully_updated: '{resource} successfully updated.'
 successfully_created: '{resource} successfully created.'
+successfully_attached: '{resource} successfully attached.'
