feat(i18n): add `insufficient_permissions` error message to supported languages

--- a/resources/lang/en/errors.yaml
+++ b/resources/lang/en/errors.yaml
@@ -1,2 +1,3 @@
 not_found: '{resource} not found'
 permission_denied: 'Permission denied'
+insufficient_permissions: 'Insufficient permissions. Required: {permissions}'
