feat(errors): add new error messages for localization
Added new error messages for unauthorized access, authentication requirements, excessive authentication attempts, upload limits, and sorting validations. Updated localization files for `en`, `es`, and `pt`.

--- a/resources/lang/en/errors.yaml
+++ b/resources/lang/en/errors.yaml
@@ -1,3 +1,9 @@
 not_found: '{resource} not found'
 permission_denied: 'Permission denied'
 insufficient_permissions: 'Insufficient permissions. Required: {permissions}'
+unauthorized_access: 'Unauthorized access'
+authentication_required: 'Authentication required'
+too_many_auth_attempts: 'Too many authentication attempts. Please try again later.'
+upload_limit_exceeded: 'Upload limit exceeded. Please try again in an hour.'
+invalid_sort_key: 'Invalid sort key: {key}. Must be one of: {available}'
+invalid_sort_direction: 'Invalid direction. Must be "{asc}" or "{desc}".'
