--- a/resources/lang/es/errors.yaml
+++ b/resources/lang/es/errors.yaml
@@ -1,6 +1,12 @@
 not_found: '{resource} no encontrado'
 permission_denied: 'Permiso denegado'
 insufficient_permissions: 'Permisos insuficientes. Requerido: {permissions}'
+unauthorized_access: 'Acceso no autorizado'
+authentication_required: 'Autenticación requerida'
+too_many_auth_attempts: 'Demasiados intentos de autenticación. Por favor, inténtelo de nuevo más tarde.'
+upload_limit_exceeded: 'Límite de carga excedido. Por favor, inténtelo de nuevo en una hora.'
+invalid_sort_key: 'Clave de ordenamiento inválida: {key}. Debe ser una de: {available}'
+invalid_sort_direction: 'Dirección inválida. Debe ser "{asc}" o "{desc}".'
 invalid_credentials: 'Credenciales inválidas'
 already_exists: '{resource} ya existe'
 validation_failed: 'Error de validación'
