--- a/resources/lang/pt/errors.yaml
+++ b/resources/lang/pt/errors.yaml
@@ -1,3 +1,9 @@
 not_found: '{resource} não encontrado(a)'
 permission_denied: 'Permissão negada'
 insufficient_permissions: 'Permissões insuficientes. Requerido: {permissions}'
+unauthorized_access: 'Acesso não autorizado'
+authentication_required: 'Autenticação necessária'
+too_many_auth_attempts: 'Muitas tentativas de autenticação. Por favor, tente novamente mais tarde.'
+upload_limit_exceeded: 'Limite de upload excedido. Por favor, tente novamente em uma hora.'
+invalid_sort_key: 'Chave de ordenação inválida: {key}. Deve ser uma das seguintes: {available}'
+invalid_sort_direction: 'Direção inválida. Deve ser "{asc}" ou "{desc}".'
