--- a/resources/lang/es/errors.yaml
+++ b/resources/lang/es/errors.yaml
@@ -7,6 +7,9 @@ too_many_auth_attempts: 'Demasiados intentos de autenticación. Por favor, inté
 upload_limit_exceeded: 'Límite de carga excedido. Por favor, inténtelo de nuevo en una hora.'
 invalid_sort_key: 'Clave de ordenamiento inválida: {key}. Debe ser una de: {available}'
 invalid_sort_direction: 'Dirección inválida. Debe ser "{asc}" o "{desc}".'
+invalid_verification_token: 'Token de verificación inválido'
+email_already_verified: 'Correo electrónico ya verificado'
+verification_token_expired: 'El token de verificación ha expirado. Por favor, solicite uno nuevo.'
 invalid_credentials: 'Credenciales inválidas'
 already_exists: '{resource} ya existe'
 validation_failed: 'Error de validación'
